Some more improvements