@@ -1,5 +1,6 @@
 package org.apache.sysds.hops.rewriter.codegen;
 
+import javassist.compiler.CodeGen;
 import org.apache.sysds.hops.rewriter.RewriterRule;
 import org.apache.sysds.hops.rewriter.RewriterStatement;
 import org.apache.sysds.hops.rewriter.RuleContext;
@@ -10,6 +11,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
 import java.util.Queue;
 import java.util.stream.Collectors;
 
@@ -26,21 +28,32 @@ public class CodeGenCondition {
 	private Object conditionValue;
 	private List<Object> rulesIf;
 	private List<Integer> relativeChildPath;
+	private RewriterStatement representant;
 
-	private CodeGenCondition(ConditionType cType, Object cValue) {
+	private CodeGenCondition(ConditionType cType, Object cValue, List<Integer> relativeChildPath, RewriterStatement representant, final RuleContext ctx) {
 		conditionType = cType;
 		conditionValue = cValue;
 		rulesIf = new ArrayList<>();
+		this.relativeChildPath = relativeChildPath;
+		this.representant = representant;
+
+		if (conditionType != ConditionType.ELSE)
+			buildConditionCheck(new StringBuilder(), ctx);
 	}
 
-	public static List<CodeGenCondition> buildCondition(List<RewriterRule> rules, final RuleContext ctx) {
+	public static List<CodeGenCondition> buildCondition(List<RewriterRule> rules, int maxNumRules, final RuleContext ctx) {
+		if (rules.isEmpty())
+			return Collections.emptyList();
 		List<Object> transformed = rules.stream().map(rule -> new Tuple2<RewriterRule, RewriterStatement>(rule, rule.getStmt1())).collect(Collectors.toList());
-		List<Object> out = populateLayerRecursively(transformed, Collections.emptyList(), new LinkedList<>(), ctx);
-		return out.stream().map(o -> ((CodeGenCondition)o)).collect(Collectors.toList());
+		List<Object> out = populateLayerRecursively(transformed, Collections.emptyList(), new LinkedList<>(), maxNumRules, ctx);
+		List<CodeGenCondition> cond = out.stream().filter(o -> o instanceof CodeGenCondition).map(o -> ((CodeGenCondition)o)).collect(Collectors.toList());
+		return cond.isEmpty() ? List.of(conditionalElse(transformed, Collections.emptyList(), ((Tuple2<RewriterRule, RewriterStatement>) transformed.get(0))._2, ctx)) : cond;
 	}
 
-	private static List<Object> populateLayerRecursively(List<Object> rules, List<Integer> relativeChildPath, Queue<Tuple2<List<Object>, List<Integer>>> queue, final RuleContext ctx) {
-		System.out.println("Current: " + ((Tuple2<RewriterRule, RewriterStatement>) rules.get(0))._2);
+	private static List<Object> populateLayerRecursively(List<Object> rules, List<Integer> relativeChildPath, Queue<Tuple2<List<Object>, List<Integer>>> queue, int maxNumRules, final RuleContext ctx) {
+		if (rules.size() <= maxNumRules)
+			return rules;
+
 		List<Object> out = populateDataTypeLayer(rules, relativeChildPath, ctx);
 
 		for (int i = 0; i < out.size(); i++) {
@@ -76,7 +89,7 @@ public class CodeGenCondition {
 
 						if (!mQueue.isEmpty()) {
 							Tuple2<List<Object>, List<Integer>> next = mQueue.poll();
-							c4.rulesIf = populateLayerRecursively(next._1, next._2(), mQueue, ctx);
+							c4.rulesIf = populateLayerRecursively(next._1, next._2(), mQueue, maxNumRules, ctx);
 						}
 					}
 
@@ -98,7 +111,7 @@ public class CodeGenCondition {
 		for (Object o : rules) {
 			Tuple2<RewriterRule, RewriterStatement> t = (Tuple2<RewriterRule, RewriterStatement>) o;
 			if (!conds.stream().anyMatch(cond -> ((CodeGenCondition) cond).insertIfMatches(t, ctx))) {
-				CodeGenCondition cond = CodeGenCondition.conditionalDataType(t._2, ctx);
+				CodeGenCondition cond = CodeGenCondition.conditionalDataType(t._2, relativeChildPath, t._2, ctx);
 				cond.insertIfMatches(t, ctx);
 				conds.add(cond);
 			}
@@ -108,27 +121,31 @@ public class CodeGenCondition {
 	}
 
 	private static List<Object> populateOpClassLayer(List<Object> l, List<Integer> relativeChildPath, final RuleContext ctx) {
-		List<Object> conds = new ArrayList<>();
-		List<Object> remaining = new ArrayList<>();
+		try {
+			List<Object> conds = new ArrayList<>();
+			List<Object> remaining = new ArrayList<>();
 
-		for (Object o : l) {
-			Tuple2<RewriterRule, RewriterStatement> t = (Tuple2<RewriterRule, RewriterStatement>) o;
-			if (canGenerateOpClassCheck(t._2, ctx)) {
-				if (!conds.stream().anyMatch(cond -> ((CodeGenCondition) cond).insertIfMatches(t, ctx))) {
-					CodeGenCondition cond = CodeGenCondition.conditionalOpClass(t._2, ctx);
-					cond.insertIfMatches(t, ctx);
-					conds.add(cond);
+			for (Object o : l) {
+				Tuple2<RewriterRule, RewriterStatement> t = (Tuple2<RewriterRule, RewriterStatement>) o;
+				if (canGenerateOpClassCheck(t._2, ctx)) {
+					if (!conds.stream().anyMatch(cond -> ((CodeGenCondition) cond).insertIfMatches(t, ctx))) {
+						CodeGenCondition cond = CodeGenCondition.conditionalOpClass(t._2, relativeChildPath, t._2, ctx);
+						cond.insertIfMatches(t, ctx);
+						conds.add(cond);
+					}
+				} else {
+					remaining.add(t);
 				}
-			} else {
-				remaining.add(t);
 			}
-		}
 
-		if (!remaining.isEmpty()) {
-			conds.add(CodeGenCondition.conditionalElse(remaining, ctx));
-		}
+			if (!remaining.isEmpty()) {
+				conds.add(CodeGenCondition.conditionalElse(remaining, relativeChildPath, ((Tuple2<RewriterRule, RewriterStatement>) remaining.get(0))._2, ctx));
+			}
 
-		return conds;
+			return conds;
+		} catch (Exception e) {
+			return Collections.emptyList();
+		}
 	}
 
 	private static List<Object> populateOpCodeLayer(List<Object> l, List<Integer> relativeChildPath, final RuleContext ctx) {
@@ -139,7 +156,7 @@ public class CodeGenCondition {
 			Tuple2<RewriterRule, RewriterStatement> t = (Tuple2<RewriterRule, RewriterStatement>) o;
 			if (canGenerateOpCodeCheck(t._2, ctx)) {
 				if (!conds.stream().anyMatch(cond -> ((CodeGenCondition) cond).insertIfMatches(t, ctx))) {
-					CodeGenCondition cond = CodeGenCondition.conditionalOpCode(t._2, ctx);
+					CodeGenCondition cond = CodeGenCondition.conditionalOpCode(t._2, relativeChildPath, t._2, ctx);
 					cond.insertIfMatches(t, ctx);
 					conds.add(cond);
 				}
@@ -149,7 +166,7 @@ public class CodeGenCondition {
 		}
 
 		if (!remaining.isEmpty()) {
-			conds.add(CodeGenCondition.conditionalElse(remaining, ctx));
+			conds.add(CodeGenCondition.conditionalElse(remaining, relativeChildPath, ((Tuple2<RewriterRule, RewriterStatement>) remaining.get(0))._2, ctx));
 		}
 
 		return conds;
@@ -163,7 +180,7 @@ public class CodeGenCondition {
 			Tuple2<RewriterRule, RewriterStatement> t = (Tuple2<RewriterRule, RewriterStatement>) o;
 			if (canGenerateInputSizeCheck(t._2, ctx)) {
 				if (!conds.stream().anyMatch(cond -> ((CodeGenCondition) cond).insertIfMatches(t, ctx))) {
-					CodeGenCondition cond = CodeGenCondition.conditionalInputSize(t._2.getOperands().size(), ctx);
+					CodeGenCondition cond = CodeGenCondition.conditionalInputSize(t._2.getOperands().size(), relativeChildPath, t._2, ctx);
 					cond.insertIfMatches(t, ctx);
 					conds.add(cond);
 				}
@@ -173,10 +190,64 @@ public class CodeGenCondition {
 		}
 
 		if (!remaining.isEmpty()) {
-			conds.add(CodeGenCondition.conditionalElse(remaining, ctx));
+			conds.add(CodeGenCondition.conditionalElse(remaining, relativeChildPath, ((Tuple2<RewriterRule, RewriterStatement>) remaining.get(0))._2, ctx));
 		}
 
 		return conds;
+	}
+
+	public String getVarName() {
+		if (relativeChildPath.isEmpty())
+			return "hi";
+		return "hi_" + relativeChildPath.stream().map(Object::toString).collect(Collectors.joining("_"));
+	}
+
+	public void buildConditionCheck(StringBuilder sb, final RuleContext ctx) {
+		switch (conditionType) {
+			case DATA_TYPE:
+				sb.append("hi");
+				if (!relativeChildPath.isEmpty()) {
+					sb.append("_");
+					sb.append(relativeChildPath.stream().map(Object::toString).collect(Collectors.joining("_")));
+				}
+				sb.append(".getDataType() == ");
+				sb.append(CodeGenUtils.getReturnType(getDataType() == ConditionDataType.MATRIX ? "MATRIX" : "FLOAT")[0]);
+				break;
+			case OP_CLASS:
+				sb.append("hi");
+				if (!relativeChildPath.isEmpty()) {
+					sb.append("_");
+					sb.append(relativeChildPath.stream().map(Object::toString).collect(Collectors.joining("_")));
+				}
+				sb.append(" instanceof " + CodeGenUtils.getOpClass(representant, ctx));
+				break;
+			case OP_CODE:
+				String hopVar = "hi";
+				if (!relativeChildPath.isEmpty()) {
+					hopVar += "_";
+					hopVar += relativeChildPath.stream().map(Object::toString).collect(Collectors.joining("_"));
+				}
+				String specialInstr = CodeGenUtils.getSpecialOpCheck(representant, ctx, hopVar);
+				if (specialInstr != null) {
+					sb.append(specialInstr);
+				} else {
+					sb.append(hopVar);
+					sb.append(".getOp() == ");
+					sb.append(CodeGenUtils.getOpCode(representant, ctx));
+				}
+				break;
+			case NUM_INPUTS:
+				sb.append("hi");
+				if (!relativeChildPath.isEmpty()) {
+					sb.append("_");
+					sb.append(relativeChildPath.stream().map(Object::toString).collect(Collectors.joining("_")));
+				}
+				sb.append(".getInput().size() == ");
+				sb.append(conditionValue.toString());
+				break;
+			default:
+				throw new IllegalArgumentException(conditionType.name());
+		}
 	}
 
 	public boolean insertIfMatches(Tuple2<RewriterRule, RewriterStatement> t, final RuleContext ctx) {
@@ -235,38 +306,131 @@ public class CodeGenCondition {
 	}
 
 
-	public static CodeGenCondition conditionalDataType(RewriterStatement stmt, final RuleContext ctx) {
+	public static CodeGenCondition conditionalDataType(RewriterStatement stmt, List<Integer> i, RewriterStatement representant, final RuleContext ctx) {
 		ConditionDataType cdt = stmt.getResultingDataType(ctx).equals("MATRIX") ? ConditionDataType.MATRIX : ConditionDataType.SCALAR;
-		return new CodeGenCondition(ConditionType.DATA_TYPE, cdt);
+		return new CodeGenCondition(ConditionType.DATA_TYPE, cdt, i, representant, ctx);
 	}
 
-	public static CodeGenCondition conditionalOpClass(RewriterStatement op, final RuleContext ctx) {
+	public static CodeGenCondition conditionalOpClass(RewriterStatement op, List<Integer> i, RewriterStatement representant, final RuleContext ctx) {
 		String opClass = CodeGenUtils.getOpClass(op, ctx);
-		return new CodeGenCondition(ConditionType.OP_CLASS, opClass);
+		return new CodeGenCondition(ConditionType.OP_CLASS, opClass, i, representant, ctx);
 	}
 
 	public static boolean canGenerateOpClassCheck(RewriterStatement op, final RuleContext ctx) {
 		return !op.isDataOrigin();
 	}
 
-	public static CodeGenCondition conditionalOpCode(RewriterStatement op, final RuleContext ctx) {
+	public static CodeGenCondition conditionalOpCode(RewriterStatement op, List<Integer> i, RewriterStatement representant, final RuleContext ctx) {
 		String opCode = CodeGenUtils.getOpCode(op, ctx);
-		return new CodeGenCondition(ConditionType.OP_CODE, opCode);
+		return new CodeGenCondition(ConditionType.OP_CODE, opCode, i, representant, ctx);
 	}
 
 	public static boolean canGenerateOpCodeCheck(RewriterStatement op, final RuleContext ctx) {
 		return !op.isDataOrigin();
 	}
 
-	public static CodeGenCondition conditionalInputSize(int inputSize, final RuleContext ctx) {
-		return new CodeGenCondition(ConditionType.NUM_INPUTS, inputSize);
+	public static CodeGenCondition conditionalInputSize(int inputSize, List<Integer> i, RewriterStatement representant, final RuleContext ctx) {
+		return new CodeGenCondition(ConditionType.NUM_INPUTS, inputSize, i, representant, ctx);
 	}
 
 	public static boolean canGenerateInputSizeCheck(RewriterStatement op, final RuleContext ctx) {
 		return !op.isDataOrigin();
 	}
 
-	public static CodeGenCondition conditionalElse(List<Object> l, final RuleContext ctx) {
-		return new CodeGenCondition(ConditionType.ELSE, l);
+	public static CodeGenCondition conditionalElse(List<Object> l, List<Integer> relativeChildPath, RewriterStatement representant, final RuleContext ctx) {
+		CodeGenCondition cond = new CodeGenCondition(ConditionType.ELSE, null, relativeChildPath, representant, ctx);
+		cond.rulesIf = l;
+		return cond;
+	}
+
+	public static String getSelectionString(List<CodeGenCondition> conds, int indentation, Map<RewriterRule, String> ruleFunctionMappings, final RuleContext ctx) {
+		StringBuilder sb = new StringBuilder();
+		buildSelection(sb, conds, indentation, ruleFunctionMappings, ctx);
+		return sb.toString();
+	}
+
+	public static void buildSelection(StringBuilder sb, List<CodeGenCondition> conds, int indentation, Map<RewriterRule, String> ruleFunctionMappings, final RuleContext ctx) {
+		if (conds.isEmpty())
+			return;
+
+		CodeGenCondition firstCond = conds.get(0);
+
+		if (firstCond.conditionType == ConditionType.ELSE) {
+			List<CodeGenCondition> nestedCondition = firstCond.rulesIf.stream().filter(o -> o instanceof CodeGenCondition).map(o -> (CodeGenCondition)o).collect(Collectors.toList());
+			buildSelection(sb, nestedCondition, indentation, ruleFunctionMappings, ctx);
+			if (nestedCondition.isEmpty()) {
+				List<Tuple2<RewriterRule, RewriterStatement>> cur = firstCond.rulesIf.stream().map(o -> (Tuple2<RewriterRule, RewriterStatement>)o).collect(Collectors.toList());
+
+				for (Tuple2<RewriterRule, RewriterStatement> t : cur) {
+					String fMapping = ruleFunctionMappings.get(t._1);
+					if (fMapping != null) {
+						RewriterCodeGen.indent(indentation, sb);
+						sb.append("hi = ");
+						sb.append(fMapping);
+						sb.append("(hi);");
+						sb.append("\n");
+					}
+				}
+			}
+			return;
+		}
+
+		RewriterCodeGen.indent(indentation, sb);
+		sb.append("if ( ");
+		firstCond.buildConditionCheck(sb, ctx);
+		sb.append(" ) {\n");
+		List<CodeGenCondition> nestedCondition = firstCond.rulesIf.stream().filter(o -> o instanceof CodeGenCondition).map(o -> (CodeGenCondition)o).collect(Collectors.toList());
+		buildSelection(sb, nestedCondition, indentation + 1, ruleFunctionMappings, ctx);
+
+		if (nestedCondition.isEmpty()) {
+			List<Tuple2<RewriterRule, RewriterStatement>> cur = firstCond.rulesIf.stream().map(o -> (Tuple2<RewriterRule, RewriterStatement>)o).collect(Collectors.toList());
+
+			for (Tuple2<RewriterRule, RewriterStatement> t : cur) {
+				String fMapping = ruleFunctionMappings.get(t._1);
+				if (fMapping != null) {
+					RewriterCodeGen.indent(indentation, sb);
+					sb.append("hi = ");
+					sb.append(fMapping);
+					sb.append("(hi);");
+					sb.append("\n");
+				}
+			}
+		}
+
+		RewriterCodeGen.indent(indentation, sb);
+		sb.append("}");
+
+		for (CodeGenCondition cond : conds.subList(1, conds.size())) {
+			if (cond.conditionType == ConditionType.ELSE) {
+				sb.append(" else {\n");
+			} else {
+				sb.append(" else if ( ");
+				cond.buildConditionCheck(sb, ctx);
+				sb.append(" ) {\n");
+			}
+
+			List<CodeGenCondition> mNestedCondition = cond.rulesIf.stream().filter(o -> o instanceof CodeGenCondition).map(o -> (CodeGenCondition)o).collect(Collectors.toList());
+			buildSelection(sb, mNestedCondition, indentation + 1, ruleFunctionMappings, ctx);
+
+			if (mNestedCondition.isEmpty()) {
+				List<Tuple2<RewriterRule, RewriterStatement>> cur = cond.rulesIf.stream().map(o -> (Tuple2<RewriterRule, RewriterStatement>)o).collect(Collectors.toList());
+
+				for (Tuple2<RewriterRule, RewriterStatement> t : cur) {
+					String fMapping = ruleFunctionMappings.get(t._1);
+					if (fMapping != null) {
+						RewriterCodeGen.indent(indentation, sb);
+						sb.append("hi = ");
+						sb.append(fMapping);
+						sb.append("(hi);");
+						sb.append("\n");
+					}
+				}
+			}
+
+			RewriterCodeGen.indent(indentation, sb);
+			sb.append("}");
+		}
+
+		sb.append("\n");
 	}
 }
